--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fastclick": "^1.0.6",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "vconsole": "^3.2.0",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^2.6.7",
     "vue-router": "^3.0.1",
